package MainClasses;


import java.util.*;


public class Main {
    /**
     * This is a Javadoc comment for the myMethod method.
     * @param args Description of param1adfasdfasdfadsfadfasdfasdfasdf
     */
    public static void main(String[] args) {
        //Scanner sc = new Scanner(System.in);
        //Map<Integer, MainClasses.Product> products = new HashMap<>();

        ProductCollection.PRODUCT_COLLECTION.getData();
        CommandReader.readCommands();



    }

}
