package enums;

public enum Country {
    UNITED_KINGDOM,
    USA,
    SPAIN,
    ITALY,
    NORTH_KOREA;
}